<resources>
    <string name="app_name">MX Component_V0.0</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lbl_price">Price</string>
    <string name="textview1">TextView</string>
    <string name="login">Login</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="register_here">Register here</string>
    <string name="repeatpassword">Password</string>
    <string name="mevn_all_right_reserved_ver0_0">MEVN_All right reserved ver0.0</string>
    <string name="name">Name</string>
    <string name="title_activity_devicelist">DevicelistActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Settings</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="plc_list">PLC list</string>
    <!--     String used for add devices page-->
    <string name="unit_type">unit type</string>
    <string name="io_number">io number</string>
    <string name="cpu_type">cpu type</string>
    <string name="protocol_type">protocol type</string>
    <string name="iprange1">field 1</string>
    <string name="iprange2">field 2</string>
    <string name="iprange3">field 3</string>
    <string name="iprange4">field 4</string>
    <string name="port_number"> port number</string>
    <string name="des_port_number">Destination port number</string>
    <string name="add_device">add device</string>
    <string name="back_to_previous">back to previous</string>
    <string name="group">group1</string>
    <string name="expandableview">expandableview</string>
    <string name="already_a_mevn_s_family_click_here_to_login">Already a MEVN\'s family? Click here to login</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="check_connect">check connect</string>
    <string name="ip_address">IP Address</string>
    <string name="time_out">Time out</string>
    <string name="destination_timeout">Destination timeout</string>
    <string-array name="group1">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="movies">Movies</string>
    <string name="button_convert">Button convert</string>
    <string name="textview">TextView</string>
    <string name="make_notification">Create notification</string>
    <string name="button_getnotification1"> Test notification 1</string>
    <string name="button_getnotification2"> Test notification 2</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>