<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/btn_checkrecyclerview"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_below="@+id/btn_checkexapadbleview"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:gravity="center_horizontal"
        android:text="@string/recyclerview" />

    <Button
        android:id="@+id/btn_checkconnection"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_below="@id/btn_checkrecyclerview"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="-642dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:gravity="center_horizontal"
        android:text="@string/check_connect" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/Txtname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/Txtpassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Txtname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="@string/password" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_items"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/Txtpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="65dp"
        android:background="@color/colorAccent"
        app:cardElevation="20dp">

        <RelativeLayout
            android:id="@+id/relative_layout_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:soundEffectsEnabled="true"
            android:splitMotionEvents="false">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/login"
                android:textSize="16sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview_items"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register_here"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/mevn_all_right_reserved_ver0_0"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_checkexapadbleview"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_below="@+id/textView_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:gravity="center_horizontal"
        android:text="@string/expandableview" />

</RelativeLayout>