<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Adddevice_activity.Adddevice_activity_2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/read_device_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/darkColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/add_device"
                app:srcCompat="@android:drawable/ic_menu_add"
                tools:ignore="VectorDrawableCompat" />

            <ImageButton
                android:id="@+id/next_Button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/back_to_previous"
                app:srcCompat="@drawable/abc_vector_test"
                tools:ignore="PrivateResource,VectorDrawableCompat" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/read_device_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:text="@string/ip_address" />

            <LinearLayout
                android:id="@+id/card_view_ipaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_ip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/cardview_light_background"
                android:orientation="horizontal"
                android:theme="@style/AppTheme">

                <EditText
                    android:id="@+id/Txtipfield1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/layout_margin_top"
                    android:layout_marginLeft="@dimen/layout_margin_top"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/iprange1"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="3"
                    android:text=""
                    app:layout_constraintTop_toBottomOf="parent" />

                <EditText
                    android:id="@+id/Txtipfield2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/layout_margin_top"
                    android:layout_marginLeft="@dimen/layout_margin_top"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/iprange2"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="3"
                    android:text=""
                    app:layout_constraintTop_toBottomOf="parent"
                    tools:layout_editor_absoluteX="100dp" />

                <EditText
                    android:id="@+id/Txtipfield3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/layout_margin_top"
                    android:layout_marginLeft="@dimen/layout_margin_top"
                    android:ems="10"
                    android:hint="@string/iprange3"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="3"
                    android:text=""
                    app:layout_constraintTop_toBottomOf="parent"
                    tools:layout_editor_absoluteX="100dp" />

                <EditText
                    android:id="@+id/Txtipfield4"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/layout_margin_top"
                    android:layout_marginLeft="@dimen/layout_margin_top"
                    android:ems="10"
                    android:hint="@string/iprange4"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="3"
                    android:text=""
                    app:layout_constraintTop_toBottomOf="parent"
                    tools:layout_editor_absoluteX="100dp" />
            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/TxtPortnumber"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:autofillHints="Port_number"
            android:ems="10"
            android:hint="@string/port_number"
            android:inputType="numberSigned"
            android:maxLength="4" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/TxtDesPortnumber"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/TxtPortnumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:autofillHints="Port_number"
            android:ems="10"
            android:hint="@string/des_port_number"
            android:inputType="numberSigned"
            android:maxLength="4" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/Txttimeout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/TxtDesPortnumber"
            android:layout_centerHorizontal="true"
            android:autofillHints="Port_number"
            android:ems="10"
            android:hint="@string/time_out"
            android:inputType="numberSigned"
            android:maxLength="4" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/Txtcpu_timeout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Txttimeout"
            android:autofillHints="Port_number"
            android:ems="10"
            android:hint="@string/destination_timeout"
            android:inputType="numberSigned"
            android:maxLength="4" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>


<!--</androidx.constraintlayout.widget.ConstraintLayout>-->