<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".Signup_activity.Signup_mainactivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/pngwave" />


    <EditText
        android:id="@+id/Txtname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/Txtpassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Txtname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="" />

    <EditText
        android:id="@+id/Rptpassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Txtpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_items"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/Rptpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        app:cardElevation="20dp">

        <RelativeLayout
            android:id="@+id/relative_layout_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:soundEffectsEnabled="true"
            android:splitMotionEvents="false">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/register_here"
                android:textSize="16sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview_items"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/already_a_mevn_s_family_click_here_to_login"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

</RelativeLayout>